WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310911
[JSC] Fix testair and testb3 crashes under USE(PROTECTED_JIT) by adding ArenaLifetime to test threads
https://bugs.webkit.org/show_bug.cgi?id=310911
Summary
[JSC] Fix testair and testb3 crashes under USE(PROTECTED_JIT) by adding Arena...
Yijia Huang
Reported
2026-03-27 11:44:34 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-27 11:44:40 PDT
<
rdar://problem/173524423
>
Yijia Huang
Comment 2
2026-03-27 11:50:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61511
EWS
Comment 3
2026-03-27 18:24:16 PDT
Committed
310126@main
(db82cc210cb5): <
https://commits.webkit.org/310126@main
> Reviewed commits have been landed. Closing PR #61511 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug