[JSC] Fix testair and testb3 crashes under USE(PROTECTED_JIT) by adding ArenaLifetime to test threads https://bugs.webkit.org/show_bug.cgi?id=310911 rdar://173524423

Reviewed by Dan Hecht.

testair and testb3 allocate B3::Procedure and related objects (CFG,
BasicBlock, Value, etc.) which are marked WTF_MAKE_SEQUESTERED_ARENA_ALLOCATED.
When USE(PROTECTED_JIT) is enabled (internal SDK + macOS), these
types route through SequesteredArenaAllocator::malloc(), which hard-asserts
m_alive before every allocation. m_alive is set to true only by ArenaLifetime's
constructor (beginArenaLifetime()) and back to false by its destructor
(endArenaLifetime()).

Neither testair's worker thread loop nor testb3's worker thread loop nor
testb3's RUN_NOW main-thread path ever constructed an ArenaLifetime, so
every allocation crashed immediately with ASSERT(m_alive). This went
unnoticed because EWS bots build with the public SDK (USE(PROTECTED_JIT) = 0),
where WTF_MAKE_SEQUESTERED_ARENA_ALLOCATED falls back to plain TZone malloc
with no arena lifetime requirement. This patch fixes the issue by constructing
ArenaLifetime scoped to each individual test task.

Canonical link: https://commits.webkit.org/310126@main